Fix a bug when the content overflows the browser window

--- a/ashes/src/less/layout/_site.less
+++ b/ashes/src/less/layout/_site.less
@@ -12,6 +12,7 @@
     display: flex;
     flex-direction: column;
     z-index: 1;
+    overflow: hidden;
 
     .fc-main {
       flex: 1;
